Updating POM for Java 11